--- a/hello2/www/index.html
+++ b/hello2/www/index.html
@@ -30,8 +30,7 @@
             <h1>PhoneGap</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-                <p class="event received"><i>Hey there</i></p>
+                <p class="event received">So, get going already!</p>
             </div>
         </div>
         <script type="text/javascript" src="phonegap.js"></script>
