--- a/hello2/www/page2.html
+++ b/hello2/www/page2.html
@@ -23,17 +23,13 @@
         <meta name="format-detection" content="telephone=no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Hello World</title>
+        <title>Page 2</title>
     </head>
     <body>
         <div class="app">
-            <h1>PhoneGap</h1>
-            <div id="deviceready" class="welcome">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Welcome to my App</p>
-            </div>
+            <h1>PhoneGap -- page 2</h1>
             <div>
-            	<a href="./page2.html">Click here to go to page 2</a>
+            	<a href="./index.html">Click here to go home</a>
             </div>
         </div>
         <script type="text/javascript" src="phonegap.js"></script>
