--- a/hello2/www/page2.html
+++ b/hello2/www/page2.html
@@ -26,6 +26,7 @@
         <title>Page 2</title>
     </head>
     <body>
+    <img src="./img/indu_4half_months.png" alt="indu at four and a half months">
         <div class="app">
             <h1>PhoneGap -- page 2</h1>
             <div>
